# hcmus

./: .gitignore  README.md  config.py  hello.py  meeting.md  pyproject.toml  regex.md  test.md
analytics/: test_phobert.ipynb
analytics/company_reviews/: sentiment_analysis.ipynb
analytics/company_reviews/notebooks/: bert_sentiment_training.ipynb  predict_review_sentiment.ipynb
courses/archive/comp_stats/: 20241222_computational_statistics.md  optimisation.r
courses/archive/database_management/: info.md
courses/archive/machine_learning/: info.md
courses/comp_stats/: 20241229_computational_statistics.md  info.md
courses/comp_stats/exercises/: exercise_chapter_3.r
courses/comp_stats/final/: car_price.csv  clean_car_price.ipynb  david_gay_lasso.R  test.R
courses/comp_stats/practice/: example_2_secant.r
courses/comp_stats/quiz/: quiz_1.r  quiz_2_question_1.r  quiz_3_1_2.r
courses/data_engineering/: final.md
courses/database_advance/: 24C01045_NghiemMinhKhang.md  bonus.md
courses/deep_learning/: Assignment_DeepLearning.ipynb  Demo_1_DeepLearning.ipynb
courses/intro_ds/temporal/: metaparams_regularizer.ipynb  uni-temporal.dbcnb
courses/knowledge/: exercise_1.html  genotype_phenotype.ipynb  python_script.md
courses/knowledge/assignment_2/: 24C01045_NghiemMinhKhang.pages  assignment_2.html
courses/linear_algebra/: NghiemMinhKhang_24c01045.html  NghiemMinhKhang_24c01045.ipynb
courses/philosophy/: cau_1.md  cau_1_gen.md  cau_2.md  cau_2_gen.md  marking_criteria.md  midterm_q1.md  midterm_q2.md  midterm_q2_complete.md  midterm_v1.md  test.md  tieuluan.md
courses/scientific_research_method/: event.md  exercise_1.md  exercise_3.md  scientific_research_method.md
data/company_review/: 2025-04-12_company_1900_list.csv
data/load/: 2025-04-13_company_1900_list.parquet  2025-04-13_company_1900_overview.parquet
data_ingestion/: scrapy.cfg
data_ingestion/data_ingestion/: items.py  middlewares.py  pipelines.py  settings.py
ds/scientific_research_method/: exercise_0.md  exercise_2.ipynb  exercise_2.md
extract/company_reviews/: scrapy.cfg
learn/: README.md  pyproject.toml  requirements.txt  test.ipynb
learn/learn_altair/: tutorials.ipynb
learn/learn_deep_learning/self_taught/: mnist.ipynb  test.ipynb  tutorials.ipynb
learn/learn_duckdb/: create_duckdb.ipynb  test_duckdb.ipynb  test_duckdb.py
learn/learn_fastapi/: connect_duckdb.py
learn/learn_fastapi/tutorial/: main.py
learn/learn_gradio/: quickstart.ipynb
learn/learn_polars/: polars_encoding.ipynb
learn/learn_pytorch/: test_pytorch.ipynb
learn/learn_pytorch/pytorch_mainpage/: datasets.ipynb  get_started.ipynb  quickstart.ipynb  tensors.ipynb
learn/learn_pytorch/self_taught/: handwritten_numbers.ipynb
learn/learn_stratascratch/capital_one/: model_building_on_synthetic_data.ipynb
learn/learn_svelte/: learn_worksml.md
learn/learn_svelte/tutorial/svelte_demo/: package.json
learn/learn_svelte/tutorial/svelte_tutorial/: package.json
learn/learn_svelte/tutorial/svelte_tutorial/src/routes/: +layout.svelte  +page.svelte
learn/learn_svelte/tutorial/svelte_tutorial/src/routes/blog/[test]/: +error.svelte  +page.server.ts  +page.svelte
learn/learn_svelte/tutorial/svelte_tutorial/src/routes/settings/: +layout.svelte  +layout.ts
load/: test.ipynb
utils/: hf_sync.ipynb  hf_sync.py  io_helpers.py  test_read.py
(+700 files in other folders)
