[project]
name = "hcmus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "attrs>=25.1.0",
    "bokeh>=3.6.3",
    "fastapi>=0.115.11",
    "gradio>=5.20.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "polars>=1.24.0",
    "scrapy>=2.12.0",
    "scrapy-playwright>=0.0.43",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "vega-datasets>=0.9.0",
]
