[project]
name = "delta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "attrs>=25.3.0",
    "bokeh>=3.7.0",
    "common>=0.1.2",
    "data>=0.4",
    "datasets>=3.5.0",
    "dual>=0.3.2",
    "duckdb>=1.2.2",
    "fastapi>=0.115.11",
    "gradio>=5.22.0",
    "huggingface-hub>=0.30.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "keras>=3.11.3",
    "loguru>=0.7.3",
    "markdown>=3.8",
    "matplotlib>=3.10.1",
    "neo4j>=5.28.1",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pdf2image>=1.17.0",
    "pdfkit>=1.0.0",
    "polars>=1.26.0",
    "protobuf>=6.30.2",
    "prox>=0.0.17",
    "py-vncorenlp>=0.1.4",
    "pyarrow>=19.0.1",
    "pymupdf>=1.26.1",
    "pypdf2>=3.0.1",
    "pyperclip>=1.9.0",
    "pytesseract>=0.3.13",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "pywavelets>=1.8.0",
    "rdkit>=2025.3.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scrapy>=2.12.0",
    "scrapy-playwright>=0.0.43",
    "scrapy-user-agents>=0.1.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "tensorflow>=2.20.0",
    "tesseract>=0.1.3",
    "tight>=0.1.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
    "vega-datasets>=0.9.0",
    "xlsxwriter>=3.2.5",
]
