[project]
name = "learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "bokeh>=3.6.2",
    "duckdb>=1.2.0",
    "fastapi>=0.115.7",
    "gradio>=5.20.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "polars>=1.20.0",
    "python-dotenv>=1.0.1",
    "scrapy>=2.12.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "vega-datasets>=0.9.0",
    "datasets >= 0.1.0",
    "transformers>=4.51.3",
    "tokenizers>=0.21.1",
    "py-vncorenlp>=0.1.4",
    "scikit-learn>=1.6.1",
]
